upd: TRefreshableComponent / implements same behavior as tui.js